aemdesign-aem-compose/src/styleguide/scss/styleguide.scss
// stylelint-disable declaration-no-important
// stylelint-disable max-nesting-depth
// stylelint-disable selector-max-class
// stylelint-disable selector-max-compound-selectors
// stylelint-disable selector-max-combinators
// stylelint-disable selector-max-id

$header-height: 80px;
$sidebar-width: 280px;

// Internals
@import 'logo';

// Base Sass (core)
@import '../../core/scss/setup';

$gutter-half-width: $grid-gutter-width / 2;

.styleguide div.aside {
  display: none;
}

@include not-aem-author('.styleguide') {
  div.aside {
    display: block;
    position: relative;
    z-index: 10;
  }

  div.article {
    padding-top: $header-height;
  }

  #dls-header {
    $gutter: $gutter-half-width + 60px;

    background-color: color('grey-8');
    color: color('white');
    display: flex;
    flex-direction: column;
    height: $header-height;
    justify-content: center;
    left: 0;
    padding-left: $gutter;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: 10;

    p {
      margin-bottom: 0;

      @include media-breakpoint-down(sm) {
        font-size: $font-size-sm;
        line-height: $line-height-sm;
      }
    }

    .header-menu-control {
      background-color: transparent;
      border: 1px solid currentColor;
      border-radius: $border-radius;
      color: color('grey-4');
      padding: 5px 12px;
      position: absolute;
      right: $gutter-half-width;

      @include media-breakpoint-up(xl) {
        display: none;
      }
    }

    &::before {
      background-image: url($aem-logo);
      background-size: 50px;
      content: '';
      display: block;
      height: 50px;
      left: $gutter-half-width;
      position: absolute;
      width: 50px;
    }

    @include media-breakpoint-up(md) {
      padding-left: $gutter-half-width + 70px;
    }

    @include notch-awesome-query {
      padding-left: $gutter + $grid-gutter-width;

      &::before {
        margin-left: $grid-gutter-width;
      }
    }
  }

  #dls-menu-controls,
  #dls-menu-controls-overlay {
    height: 100%;
    left: 0;
    min-height: 100vh;
    // stylelint-disable-next-line
    min-height: -webkit-fill-available;
    min-height: fill-available;
    opacity: 0;
    position: fixed;
    top: 0;
    transition-delay: 0s;
    transition-duration: 300ms;
    transition-property: opacity, transform;
    transition-timing-function: cubic-bezier(.5, 1, .89, 1);
  }

  #dls-menu-controls {
    @include notch-awesome;

    background-color: color('white');
    border-right: 1px solid color('grey-2');
    overflow-x: visible;
    overflow-y: auto;
    padding: #{$header-height + $grid-gutter-width} $gutter-half-width $gutter-half-width;
    transform: translateX(-100%);
    width: $sidebar-width;
    z-index: 1;

    &.visible {
      opacity: 1;
      transform: translateX(0);

      + #dls-menu-controls-overlay {
        opacity: 1;
        pointer-events: all;
      }
    }

    @include media-breakpoint-up(xl) {
      opacity: 1;
      transform: none;
    }

    @include notch-awesome-query {
      width: $sidebar-width + 50px;
    }
  }

  #dls-menu-controls-overlay {
    background-color: rgba(color('black'), .5);
    content: '';
    display: block;
    pointer-events: none;
    width: 100vw;

    @include media-breakpoint-up(xl) {
      display: none;
    }
  }

  #dls-home-button {
    margin-bottom: $grid-gutter-width;
  }

  @include media-breakpoint-up(xl) {
    div.article {
      margin-left: $sidebar-width;
      width: calc(100% - #{$sidebar-width});
    }
  }
}

.styleguide {
  aside {
    @import 'navlist';
  }

  section.contentblock:not(:last-of-type) {
    margin-bottom: $grid-gutter-width;
  }

  article > div > div > div.contentblock {
    > .contentblock {
      @include notch-awesome;

      padding: $grid-gutter-width $gutter-half-width;

      > * {
        margin-left: auto;
        margin-right: auto;
        max-width: 1920px;
      }

      > div > .text ~ div:not(:last-child) {
        margin-bottom: $grid-gutter-width;
      }

      > div {
        > .text:first-child h2 {
          font-weight: $font-weight-bold;
          margin-bottom: $line-height-base / 3;
        }

        @import 'component-fixes';
      }

      @include media-breakpoint-up(lg) {
        padding-left: $grid-gutter-width;
        padding-right: $grid-gutter-width;
      }
    }

    &:not(:last-of-type) {
      margin-bottom: 0;
    }
  }
}

@import 'colour-panel';
@import 'icon-panel';
@import 'grid-panel';
@import 'table';

